--- a/OmneFictio.Web/Views/Home/Index.cshtml
+++ b/OmneFictio.Web/Views/Home/Index.cshtml
@@ -128,12 +128,12 @@
                         plain and simple narration ever again.</span>
                 </div>
                 <div class="fdesc" data-fswipe_tabIndex="3">
-                    <h4>Knowledge is power</h4>
-                    <span>You must sometimes use references of different cultures to show your difference from
+                    <h4>Be sophisticated</h4>
+                    <span>You must sometimes refer to different cultures to show your difference from
                         peasant writers. Ever heard of the Red Ogre who cried?</span>
                 </div>
                 <div class="fdesc" data-fswipe_tabIndex="4">
-                    <h4>Advanced punctuation</h4>
+                    <h4>Punctuation</h4>
                     <span>Yes, for the first time you will use ; : ~ - correctly.</span>
                 </div>
             </div>
@@ -173,7 +173,7 @@
                 </div>
                 <div class="tcate-body">
                     <h5>Pacing</h5>
-                    <span>Is this good? Should I go faster?</span>
+                    <span>Gas, gas, gas I'm gonna step on the gas tonight!</span>
                 </div>
             </a>
             <a href="#" class="tcate">
