--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -505,7 +505,7 @@
                 <i class="bi bi-list"></i>
             </div>
             <div class="logo-cont">
-                <span><a asp-controller="Home" asp-action="Index">OmneFictio</a></span>
+                <span><a href="/">OmneFictio<span>Alpha</span></a></span>
             </div>
             <div class="searchbar-cont">
                 <div class="searchbar-wrap">
