--- a/OmneFictio.Web/wwwroot/css/site.scss
+++ b/OmneFictio.Web/wwwroot/css/site.scss
@@ -521,6 +521,13 @@ header {
         color: var(--text-color1);
         text-shadow: -2px 4px 2px var(--text-boxshadow1);
         cursor: pointer;
+        a{
+            span{
+                font-size: 0.8rem;
+                padding-left: 8px;
+                font-family: 'Gudea';
+            }
+        }
     }
 }
 
@@ -668,8 +675,9 @@ header {
         transition: opacity 0.1s ease;
         position: absolute;
         top: 52px;
-        right: 16px;
-        border-radius: 8px;
+        right: 0;
+        border-radius: 4px;
+        min-width: 150px;
         background-color: var(--dropdownbg-color);
         font-family: 'Itim', cursive;
         overflow: hidden;
