--- a/OmneFictio.Web/wwwroot/css/read.css
+++ b/OmneFictio.Web/wwwroot/css/read.css
@@ -320,7 +320,7 @@ main {
 }
 .filter-cont .filter-box .f-body .f-fanfiction_settings .ffs-series_include span {
   border-radius: 12px;
-  padding: 2px 8px;
+  padding: 3px 8px 2px;
   margin: 0 3px 4px;
   font-size: 0.9rem;
   cursor: pointer;
@@ -417,7 +417,7 @@ main {
 }
 .filter-cont .filter-box .f-body .f-tagsincexc span {
   border-radius: 12px;
-  padding: 2px 8px;
+  padding: 3px 8px 2px;
   margin: 0 3px 4px;
   font-size: 0.9rem;
   cursor: pointer;
