--- a/OmneFictio.Web/wwwroot/css/read.scss
+++ b/OmneFictio.Web/wwwroot/css/read.scss
@@ -360,7 +360,7 @@ main {
 
                     span {
                         border-radius: 12px;
-                        padding: 2px 8px;
+                        padding: 3px 8px 2px;
                         margin: 0 3px 4px;
                         font-size: 0.9rem;
                         cursor: pointer;
@@ -477,7 +477,7 @@ main {
 
                 span {
                     border-radius: 12px;
-                    padding: 2px 8px;
+                    padding: 3px 8px 2px;
                     margin: 0 3px 4px;
                     font-size: 0.9rem;
                     cursor: pointer;
