--- a/OmneFictio.Web/wwwroot/css/theme.scss
+++ b/OmneFictio.Web/wwwroot/css/theme.scss
@@ -36,6 +36,7 @@
     --searchbar-boxshadow: #31313150;
     //post list
     --post-bgcolor1: #313131;
+    --post-border1: #5e5e5e;
     --profile-post-color: #272727;
     --comment-menu-bgcolor: #3b3b3b;
     --reply-bgcolor: #313131;
@@ -135,6 +136,7 @@
     --searchbar-boxshadow: #6868684f;
     //post list
     --post-bgcolor1: #f9f9f9;
+    --post-border1: #b1b1b1;
     --profile-post-color: #ffffff;
     --comment-menu-bgcolor: #e3e3e3;
     --reply-bgcolor: #e1e1e1;
