--- a/OmneFictio.Web/wwwroot/css/create.css
+++ b/OmneFictio.Web/wwwroot/css/create.css
@@ -46,12 +46,10 @@ header {
 .cc-fiction .ff-primary {
   display: flex;
   flex-direction: column;
-  border: 1px solid var(--create-border1);
+  padding: 14px 6px;
+  gap: 14px;
+  border-bottom: 1px solid var(--create-border1);
   background-color: var(--background-color1);
-  border-radius: 4px;
-}
-.cc-fiction .ff-primary .ff-primary-header {
-  padding: 16px;
 }
 .cc-fiction .ff-primary .ff-primary-header input {
   font-size: 1.2rem;
@@ -65,7 +63,6 @@ header {
   font-family: "Gudea", cursive;
 }
 .cc-fiction .ff-primary .ff-primary-body {
-  padding: 16px;
   display: flex;
   flex-direction: column;
 }
@@ -93,9 +90,8 @@ header {
   padding: 8px;
   display: flex;
   flex-direction: column;
-  border: 1px solid var(--create-border1);
   background-color: var(--background-color1);
-  border-radius: 4px;
+  border-bottom: 1px solid var(--create-border1);
 }
 .cc-fiction .ff-info .ff-properties-cont {
   display: flex;
@@ -139,6 +135,14 @@ header {
   border: none;
   outline: none;
   border-radius: 4px;
+}
+.cc-fiction .ff-info .ff-coverimage_preview-cont {
+  display: none;
+  padding: 10px;
+}
+.cc-fiction .ff-info .ff-coverimage_preview-cont img {
+  width: 140px;
+  height: 200px;
 }
 .cc-fiction .ff-info .ff-tags-cont,
 .cc-fiction .ff-info .ff-series-cont {
@@ -255,8 +259,7 @@ header {
   display: flex;
   flex-direction: column;
   background-color: var(--background-color1);
-  border: 1px solid var(--create-border1);
-  border-radius: 4px;
+  border-bottom: 1px solid var(--create-border1);
   gap: 20px 0;
   justify-content: center;
   /*.ff-save_draft{
@@ -400,8 +403,15 @@ header {
     justify-content: flex-start;
     gap: 4%;
   }
+  .create_content-container .cc-fiction .ff-primary {
+    border: 1px solid var(--create-border1);
+    border-radius: 4px;
+    padding: 16px;
+  }
   .create_content-container .cc-fiction .ff-info {
     padding: 16px;
+    border: 1px solid var(--create-border1);
+    border-radius: 4px;
   }
   .create_content-container .cc-fiction .ff-info .ff-properties-cont {
     justify-content: flex-start;
@@ -419,5 +429,9 @@ header {
   .create_content-container .cc-fiction .ff-info .ff-series-cont .ffseries-body {
     padding: 16px 10px;
     font-size: 16px;
+  }
+  .create_content-container .cc-fiction .ff-footer {
+    border: 1px solid var(--create-border1);
+    border-radius: 4px;
   }
 }/*# sourceMappingURL=create.css.map */
