--- a/OmneFictio.Web/wwwroot/css/postitem.css
+++ b/OmneFictio.Web/wwwroot/css/postitem.css
@@ -73,14 +73,11 @@
 .post {
   width: 100%;
   color: var(--text-color1);
-  box-shadow: 0px 2px 4px -2px rgba(0, 0, 0, 0.25);
+  box-shadow: -1px 2px 6px -2px rgba(0, 0, 0, 0.25);
+  border-bottom: 1px solid var(--post-border1);
 }
 .post:last-child {
   margin-bottom: unset;
-}
-
-.darkmode .post {
-  box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.25);
 }
 
 .post-body {
