--- a/OmneFictio.Web/wwwroot/css/postitem.scss
+++ b/OmneFictio.Web/wwwroot/css/postitem.scss
@@ -92,19 +92,14 @@
 .post {
     width: 100%;
     color: var(--text-color1);
-    -webkit-box-shadow: 0px 2px 4px -2px rgb(0 0 0 / 25%);
-    -moz-box-shadow: 0px 2px 4px -2px rgb(0 0 0 / 25%);
-    box-shadow: 0px 2px 4px -2px rgb(0 0 0 / 25%);
+    -webkit-box-shadow: -1px 2px 6px -2px rgb(0 0 0 / 25%);
+    -moz-box-shadow: -1px 2px 6px -2px rgb(0 0 0 / 25%);
+    box-shadow: -1px 2px 6px -2px rgb(0 0 0 / 25%);
+    border-bottom: 1px solid var(--post-border1);
 
     &:last-child {
         margin-bottom: unset;
     }
-}
-
-.darkmode .post {
-    -webkit-box-shadow: 0px 2px 6px 0px rgb(0 0 0 / 25%);
-    -moz-box-shadow: 0px 2px 6px 0px rgb(0 0 0 / 25%);
-    box-shadow: 0px 2px 6px 0px rgb(0 0 0 / 25%);
 }
 
 .post-body {
